<resources>
    <string name="app_name">Newsy</string>
    <string name="email">Email</string>
    <string name="already_a_user"><u>Already a user?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="password">Password</string>
    <string name="not_a_user"><u>Not a user?</u></string>
    <string name="login">Login</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="health">Health</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>